# segmentation-

./: .gitignore  COCO_CLASSES.md  GIT_COMMIT_SUMMARY.md  INSTALLATION_UPDATE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_RESULTS.md  UV_MANAGEMENT.md  detect_ceiling_detailed.py  detect_floor_lighting.py  detect_tv_detailed.py  detect_vase_detailed.py  detect_wall_detailed.py  detect_wall_lighting.py  example_usage.py  hybrid_segment.py  main.py  mask2former_segment.py  pyproject.toml  sam_everything.py  yolo_sam_segment.py
src/: __init__.py  advanced_segmenter.py  utils.py  yolo_sam_segmenter.py
