[project]
name = "image-segmentation"
version = "0.1.0"
description = "Advanced image segmentation using YOLO + SAM 2 and Grounding DINO + Mask2Former"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "sam2>=1.1.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "ultralytics>=8.3.221",
]
